# parser_vacancions

./: README.md  main.py  pyproject.toml
src/: class_api.py  class_connector.py  class_vacancy.py  classes.py  exceptions.py  utils.py
tests/: test_class_api.py  test_class_connector.py  test_class_vacancy.py
