[tool.poetry]
name = "parser-vacancions"
version = "0.1.0"
description = ""
authors = ["Marcel Dio <marceldiomare@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
